<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    tools:context=".MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF009688"
            android:elevation="5dp"
            android:minHeight="90dp">

            <TextView
                android:id="@+id/MovieDetail_MovieName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/moviename"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF000000" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/MovieDetail_Poster"
                    android:layout_width="185dp"
                    android:layout_height="277dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:maxWidth="185dp"
                    android:minHeight="277dp"
                    android:scaleType="center" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/MovieDetail_Year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/year"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FF000000" />

                    <TextView
                        android:id="@+id/MovieDetail_Rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/rating"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FF000000" />

                    <Button
                        android:id="@+id/MovieDetail_MarkAsFavourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/mark_as_favourite"
                        android:textColor="#FF000000" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/MovieDetail_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#FF000000" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/trailers"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF000000" />

                <LinearLayout
                    android:id="@+id/MovieDetail_Trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:dividerPadding="10dp"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#FF000000" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/reviews"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF000000" />

                <LinearLayout
                    android:id="@+id/MovieDetail_Reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:dividerPadding="10dp"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

